Added reader info

--- a/APDUTester/APDUTester.csproj
+++ b/APDUTester/APDUTester.csproj
@@ -35,7 +35,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="pcsc-sharp">
-      <HintPath>..\..\..\..\Projects\mobyusernfcmanagement\MobyUserNFCManagement\lib\pcsc-sharp.dll</HintPath>
+      <HintPath>lib\pcsc-sharp.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -101,6 +101,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Content Include="pcsc-sharp.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
